fix: title at center in 26.1+
Signed-off-by: EnderPhantomWing <EnderPhantomWing@outlook.com>